--- a/games.html
+++ b/games.html
@@ -31,6 +31,13 @@
     </nav>
 
    <img class="imgright" src="./img/image 18.png" alt="portfolio">
+   <div class="text">
+    <ul>
+        <li>Agar.io Je moet met een ball andere balletjes eten zodat je de grootste word en uitendelijk wint.</li>
+        <li>Boter Kaas en Eieren Je zit in een 3 bij 3 ruimte
+         met een X en een O Degene die als eerst 3 op een rij heeft wint.</li>
+    </ul>
+</div>
     <footer>
         <p>TechniekCollegeRotterdam@gmail.com</p>
         <p>&copy; 2023 Website Name. All rights reserved.</p>
