--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,13 @@
     </nav>
 
    <img class="imgright" src="./img/image 21.png" alt="portfolio">
+   <div class="div">
+    <ul>
+        <li>3 Games</li>
+        <li>Scrumboard</li>
+        <li>GitHub</li>
+    </ul>
+</div>
     <footer>
         <p>TechniekCollegeRotterdam@gmail.com</p>
         <p>&copy; 2023 Website Name. All rights reserved.</p>
