--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>portfolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,13 +31,29 @@
     </nav>
 
    <img class="imgright" src="./img/image 21.png" alt="portfolio">
-   <div class="div">
-    <ul>
-        <li>3 Games</li>
-        <li>Scrumboard</li>
-        <li>GitHub</li>
-    </ul>
-</div>
+
+    <div class="right-div">
+        <ul>
+            <li>Zanyar</li>
+            <li>Erdem</li>
+            <li>Mohammed</li>
+        </ul>
+    </div>
+    <nav>
+        <ul>
+            <li><button onclick="toonFoto()">Foto</button></li>
+            <li><button onclick="toonContact()">Contact</button></li>
+            <li><button onclick="toonPitch()">Pitch</button></li>
+            <li><button onclick="toonProjecten()">Projecten</button></li>
+            <li><button onclick="toonVaardigheden()">Vaardigheden</button></li>
+            <li><button onclick="toonErvaring()">Ervaring</button></li>
+        </ul>
+    </nav>
+    
+    <main id="display-gebied">
+       
+    </main>
+    <script src="app.js"></script>
     <footer>
         <p>TechniekCollegeRotterdam@gmail.com</p>
         <p>&copy; 2023 Website Name. All rights reserved.</p>
